[gd_scene load_steps=11 format=3 uid="uid://dxa5h0fxscjqa"]

[ext_resource type="Script" path="res://scripts/gameHandlers/uiHandler.gd" id="1_padt1"]
[ext_resource type="Texture2D" uid="uid://b77lopk6nfoas" path="res://Assets/utility/questIcon.png" id="2_g5iml"]
[ext_resource type="Texture2D" uid="uid://cjx86h7j1leul" path="res://Assets/utility/questBox.png" id="3_vucy6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk50y"]
bg_color = Color(0.462745, 0.0745098, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luvn4"]
bg_color = Color(0.87451, 0.0745098, 0, 0.894118)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_5t1fr"]
Button/styles/hover = SubResource("StyleBoxFlat_tk50y")
Button/styles/normal = SubResource("StyleBoxFlat_luvn4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ywnn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_565ss"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djd05"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_w1fjq"]
Button/styles/focus = SubResource("StyleBoxFlat_8ywnn")
Button/styles/hover = SubResource("StyleBoxFlat_565ss")
Button/styles/normal = SubResource("StyleBoxFlat_djd05")

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_padt1")

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 1041.0
offset_right = 95.0
offset_bottom = 1072.0
theme = SubResource("Theme_5t1fr")
text = "Exit Game"

[node name="quest" type="Button" parent="."]
layout_mode = 0
offset_left = 1864.0
offset_top = 3.0
offset_right = 1922.0
offset_bottom = 61.0
focus_mode = 0
theme = SubResource("Theme_w1fjq")
icon = ExtResource("2_g5iml")

[node name="questBox" type="NinePatchRect" parent="quest"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -378.0
offset_top = 5.0
offset_right = -4.0
offset_bottom = 61.0
texture = ExtResource("3_vucy6")
region_rect = Rect2(0, 0, 30, 30)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="quest/questBox"]
layout_mode = 0
offset_right = 374.0
offset_bottom = 56.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="quest/questBox/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "This is some text to show the quest dialogue size"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="exit" to="." method="_on_button_pressed"]
[connection signal="pressed" from="quest" to="." method="_on_quest_pressed"]
